STM32-project/.metadata/.plugins/org.eclipse.cdt.ui/Maniek_code.build.log
18:52:16 **** Incremental Build of configuration Debug for project Maniek_code ****
make -j16 all 
arm-none-eabi-gcc -gdwarf-4 "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G431xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:206:29: warning: passing argument 2 of 'HAL_ADC_Start_DMA' from incompatible pointer type [-Wincompatible-pointer-types]
  206 |   HAL_ADC_Start_DMA(&hadc1, adc1, 3);
      |                             ^~~~
      |                             |
      |                             uint16_t * {aka short unsigned int *}
In file included from ../Core/Inc/stm32g4xx_hal_conf.h:228,
                 from ../Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_adc.h:2242:78: note: expected 'uint32_t *' {aka 'long unsigned int *'} but argument is of type 'uint16_t *' {aka 'short unsigned int *'}
 2242 | HAL_StatusTypeDef       HAL_ADC_Start_DMA(ADC_HandleTypeDef *hadc, uint32_t *pData, uint32_t Length);
      |                                                                    ~~~~~~~~~~^~~~~
../Core/Src/main.c:207:29: warning: passing argument 2 of 'HAL_ADC_Start_DMA' from incompatible pointer type [-Wincompatible-pointer-types]
  207 |   HAL_ADC_Start_DMA(&hadc2, adc2, 2);
      |                             ^~~~
      |                             |
      |                             uint16_t * {aka short unsigned int *}
../Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_adc.h:2242:78: note: expected 'uint32_t *' {aka 'long unsigned int *'} but argument is of type 'uint16_t *' {aka 'short unsigned int *'}
 2242 | HAL_StatusTypeDef       HAL_ADC_Start_DMA(ADC_HandleTypeDef *hadc, uint32_t *pData, uint32_t Length);
      |                                                                    ~~~~~~~~~~^~~~~
../Core/Src/main.c: In function 'battery_undervoltage':
../Core/Src/main.c:637:19: error: 'vol_OK11' undeclared (first use in this function); did you mean 'vol_OK1'?
  637 |                   vol_OK11 = 0;
      |                   ^~~~~~~~
      |                   vol_OK1
../Core/Src/main.c:637:19: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:52: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

18:52:16 Build Failed. 2 errors, 2 warnings. (took 201ms)

